Fix: specs
